--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ FetchContent_MakeAvailable(sentinel)
 add_subdirectory(types)
 add_subdirectory(transform)
 add_subdirectory(diff)
-# add_subdirectory(geometry)
+add_subdirectory(geometry)
 # add_subdirectory(opt)
 # add_subdirectory(probability)
 # add_subdirectory(mechanics)
