--- a/geometry/CMakeLists.txt
+++ b/geometry/CMakeLists.txt
@@ -1,18 +1,15 @@
 
-add_library(math_geometry SHARED
+add_library(owl_geometry SHARED
     src/height_map_grid.cpp
     src/height_map_conversions.cpp
     src/height_map_functional.cpp
 )
-target_include_directories(math_geometry
+target_include_directories(owl_geometry
     PUBLIC include
 )
-target_link_libraries(math_geometry
-    PUBLIC core_std math
+target_link_libraries(owl_geometry
+    PUBLIC cpp-utils owl_types owl_transform
 )
 
-add_executable(math_geometry_test_collision test/collision.cpp)
-target_link_libraries(math_geometry_test_collision PRIVATE math_geometry)
-
-add_executable(math_geometry_test_height_map test/height_map.cpp)
-target_link_libraries(math_geometry_test_height_map PRIVATE math_geometry)
+add_executable(example_geometry_collision_primitives example/collision_primitives.cpp)
+target_link_libraries(example_geometry_collision_primitives PRIVATE owl_geometry)
