--- a/opt/CMakeLists.txt
+++ b/opt/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(math_opt INTERFACE)
-target_include_directories(math_opt
+add_library(owl_opt INTERFACE)
+target_include_directories(owl_opt
     INTERFACE include
 )
-target_link_libraries(math_opt
-    INTERFACE math_types math_algebra
+target_link_libraries(owl_opt
+    INTERFACE owl_types owl_diff
 )
 
-add_executable(math_opt_test test/main.cpp)
-target_link_libraries(math_opt_test math_opt gui)
+add_executable(example_opt example/main.cpp)
+target_link_libraries(example_opt owl_opt)
