--- a/probability/CMakeLists.txt
+++ b/probability/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(math_probability INTERFACE)
-target_include_directories(math_probability
+add_library(owl_probability INTERFACE)
+target_include_directories(owl_probability
     INTERFACE include
 )
-target_link_libraries(math_probability
-    INTERFACE math_types core_std math_algebra math_transform
+target_link_libraries(owl_probability
+    INTERFACE owl_types cpp-utils owl_diff owl_transform
 )
 
-add_executable(math_probability_test test/main.cpp)
-target_link_libraries(math_probability_test math_probability)
+add_executable(example_probability example/main.cpp)
+target_link_libraries(example_probability owl_probability)
