Updated remaining libraries to use mathbox instead of owl

--- a/diff/CMakeLists.txt
+++ b/diff/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(owl_diff INTERFACE)
-target_include_directories(owl_diff
+add_library(mathbox-diff INTERFACE)
+target_include_directories(mathbox-diff
     INTERFACE include
 )
-target_link_libraries(owl_diff
-    INTERFACE owl_types owl_transform
+target_link_libraries(mathbox-diff
+    INTERFACE mathbox-types mathbox-transform
 )
 
 add_executable(example_diff_dfunction example/dfunction.cpp)
-target_link_libraries(example_diff_dfunction owl_diff)
+target_link_libraries(example_diff_dfunction mathbox-diff)
