--- a/mechanics/CMakeLists.txt
+++ b/mechanics/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(owl_mechanics INTERFACE)
-target_include_directories(owl_mechanics
+add_library(mathbox-mechanics INTERFACE)
+target_include_directories(mathbox-mechanics
     INTERFACE include
 )
-target_link_libraries(owl_mechanics
-    INTERFACE owl_types owl_transform owl_geometry
+target_link_libraries(mathbox-mechanics
+    INTERFACE mathbox-types mathbox-transform mathbox-geometry
 )
 
 add_executable(example_mechanics example/main.cpp)
-target_link_libraries(example_mechanics owl_mechanics)
+target_link_libraries(example_mechanics mathbox-mechanics)
