--- a/opt/CMakeLists.txt
+++ b/opt/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(owl_opt INTERFACE)
-target_include_directories(owl_opt
+add_library(mathbox-opt INTERFACE)
+target_include_directories(mathbox-opt
     INTERFACE include
 )
-target_link_libraries(owl_opt
-    INTERFACE owl_types owl_diff
+target_link_libraries(mathbox-opt
+    INTERFACE mathbox-types mathbox-diff
 )
 
 add_executable(example_opt example/main.cpp)
-target_link_libraries(example_opt owl_opt)
+target_link_libraries(example_opt mathbox-opt)
