--- a/probability/CMakeLists.txt
+++ b/probability/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(owl_probability INTERFACE)
-target_include_directories(owl_probability
+add_library(mathbox-probability INTERFACE)
+target_include_directories(mathbox-probability
     INTERFACE include
 )
-target_link_libraries(owl_probability
-    INTERFACE owl_types cpp-utils owl_diff owl_transform
+target_link_libraries(mathbox-probability
+    INTERFACE mathbox-types cpp-utils mathbox-diff mathbox-transform
 )
 
 add_executable(example_probability example/main.cpp)
-target_link_libraries(example_probability owl_probability)
+target_link_libraries(example_probability mathbox-probability)
