Various fixes after renaming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
 endif()
 
 if(BUILD_ADDITIONAL_TARGETS)
-    FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip DOWNLOAD_EXTRACT_TIMESTAMP false)
+    FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip)
     include(GoogleTest)
     set(INSTALL_GTEST OFF)
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
@@ -33,11 +33,11 @@ FetchContent_Declare(cpp-utils
 )
 FetchContent_MakeAvailable(cpp-utils)
 
-FetchContent_Declare(dataflow
-    GIT_REPOSITORY https://github.com/zachlambert/dataflow.git
+FetchContent_Declare(datapack
+    GIT_REPOSITORY https://github.com/zachlambert/datapack.git
     GIT_TAG master
 )
-FetchContent_MakeAvailable(dataflow)
+FetchContent_MakeAvailable(datapack)
 
 # Library
 
