--- a/types/CMakeLists.txt
+++ b/types/CMakeLists.txt
@@ -3,5 +3,5 @@ target_include_directories(mathbox-types
     INTERFACE include
 )
 target_link_libraries(mathbox-types
-    INTERFACE Eigen3::Eigen cpp-utils dataflow
+    INTERFACE Eigen3::Eigen cpp-utils datapack
 )
