--- a/mechanics/CMakeLists.txt
+++ b/mechanics/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(mathbox-mechanics INTERFACE)
-target_include_directories(mathbox-mechanics
+add_library(mbox-mechanics INTERFACE)
+target_include_directories(mbox-mechanics
     INTERFACE include
 )
-target_link_libraries(mathbox-mechanics
-    INTERFACE mathbox-types mathbox-transform mathbox-geometry
+target_link_libraries(mbox-mechanics
+    INTERFACE mbox-types mbox-transform mbox-geometry
 )
 
 add_executable(example_mechanics example/main.cpp)
-target_link_libraries(example_mechanics mathbox-mechanics)
+target_link_libraries(example_mechanics mbox-mechanics)
