--- a/probability/CMakeLists.txt
+++ b/probability/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(mathbox-probability INTERFACE)
-target_include_directories(mathbox-probability
+add_library(mbox-probability INTERFACE)
+target_include_directories(mbox-probability
     INTERFACE include
 )
-target_link_libraries(mathbox-probability
-    INTERFACE mathbox-types cpp-utils mathbox-diff mathbox-transform
+target_link_libraries(mbox-probability
+    INTERFACE mbox-types cpp-utils mbox-diff mbox-transform
 )
 
 add_executable(example_probability example/main.cpp)
-target_link_libraries(example_probability mathbox-probability)
+target_link_libraries(example_probability mbox-probability)
