--- a/types/CMakeLists.txt
+++ b/types/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_library(mathbox-types INTERFACE)
-target_include_directories(mathbox-types
+add_library(mbox-types INTERFACE)
+target_include_directories(mbox-types
     INTERFACE include
 )
-target_link_libraries(mathbox-types
+target_link_libraries(mbox-types
     INTERFACE Eigen3::Eigen cpp-utils datapack
 )
