--- a/opt/CMakeLists.txt
+++ b/opt/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-add_library(mathbox-opt INTERFACE)
-target_include_directories(mathbox-opt
+add_library(mbox-opt INTERFACE)
+target_include_directories(mbox-opt
     INTERFACE include
 )
-target_link_libraries(mathbox-opt
-    INTERFACE mathbox-types mathbox-diff
+target_link_libraries(mbox-opt
+    INTERFACE mbox-types mbox-diff
 )
 
 add_executable(example_opt example/main.cpp)
-target_link_libraries(example_opt mathbox-opt)
+target_link_libraries(example_opt mbox-opt)
