--- a/geometry/CMakeLists.txt
+++ b/geometry/CMakeLists.txt
@@ -4,8 +4,9 @@ add_library(mbox-geometry SHARED
     src/height_map_conversions.cpp
     src/height_map_functional.cpp
 )
-target_include_directories(mbox-geometry
-    PUBLIC include
+target_include_directories(mbox-geometry PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
 target_link_libraries(mbox-geometry
     PUBLIC cpp-utils mbox-types mbox-transform
