--- a/diff/CMakeLists.txt
+++ b/diff/CMakeLists.txt
@@ -1,7 +1,8 @@
 
 add_library(mbox-diff INTERFACE)
-target_include_directories(mbox-diff
-    INTERFACE include
+target_include_directories(mbox-diff INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
 target_link_libraries(mbox-diff
     INTERFACE mbox-types mbox-transform
