--- a/mechanics/CMakeLists.txt
+++ b/mechanics/CMakeLists.txt
@@ -1,7 +1,8 @@
 
 add_library(mbox-mechanics INTERFACE)
-target_include_directories(mbox-mechanics
-    INTERFACE include
+target_include_directories(mbox-mechanics INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
 target_link_libraries(mbox-mechanics
     INTERFACE mbox-types mbox-transform mbox-geometry
