--- a/probability/CMakeLists.txt
+++ b/probability/CMakeLists.txt
@@ -1,7 +1,8 @@
 
 add_library(mbox-probability INTERFACE)
-target_include_directories(mbox-probability
-    INTERFACE include
+target_include_directories(mbox-probability INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
 target_link_libraries(mbox-probability
     INTERFACE mbox-types cpp-utils mbox-diff mbox-transform
