--- a/opt/CMakeLists.txt
+++ b/opt/CMakeLists.txt
@@ -8,5 +8,7 @@ target_link_libraries(mbox-opt
     INTERFACE mbox-types mbox-diff
 )
 
-add_executable(example_opt example/main.cpp)
-target_link_libraries(example_opt mbox-opt)
+if(${USE_SVIZ})
+    add_executable(example_opt example/main.cpp)
+    target_link_libraries(example_opt mbox-opt sviz)
+endif()
