--- a/rbm-types/CMakeLists.txt
+++ b/rbm-types/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(mbox-types INTERFACE)
-target_include_directories(mbox-types INTERFACE
+add_library(rbm-types INTERFACE)
+target_include_directories(rbm-types INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
-target_link_libraries(mbox-types
+target_link_libraries(rbm-types
     INTERFACE Eigen3::Eigen cpp-utils datapack
 )
