--- a/rbm-diff/CMakeLists.txt
+++ b/rbm-diff/CMakeLists.txt
@@ -1,12 +1,12 @@
 
-add_library(mbox-diff INTERFACE)
-target_include_directories(mbox-diff INTERFACE
+add_library(rbm-diff INTERFACE)
+target_include_directories(rbm-diff INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
-target_link_libraries(mbox-diff
-    INTERFACE mbox-types mbox-transform
+target_link_libraries(rbm-diff
+    INTERFACE rbm-types rbm-transform
 )
 
 add_executable(example_diff_dfunction example/dfunction.cpp)
-target_link_libraries(example_diff_dfunction mbox-diff)
+target_link_libraries(example_diff_dfunction rbm-diff)
