--- a/rbm-mechanics/CMakeLists.txt
+++ b/rbm-mechanics/CMakeLists.txt
@@ -1,12 +1,12 @@
 
-add_library(mbox-mechanics INTERFACE)
-target_include_directories(mbox-mechanics INTERFACE
+add_library(rbm-mechanics INTERFACE)
+target_include_directories(rbm-mechanics INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
-target_link_libraries(mbox-mechanics
-    INTERFACE mbox-types mbox-transform mbox-geometry
+target_link_libraries(rbm-mechanics
+    INTERFACE rbm-types rbm-transform rbm-geometry
 )
 
 add_executable(example_mechanics example/main.cpp)
-target_link_libraries(example_mechanics mbox-mechanics)
+target_link_libraries(example_mechanics rbm-mechanics)
