--- a/rbm-opt/CMakeLists.txt
+++ b/rbm-opt/CMakeLists.txt
@@ -10,5 +10,5 @@ target_link_libraries(rbm-opt
 
 if(${BUILD_EXAMPLES})
     add_executable(example_opt example/main.cpp)
-    target_link_libraries(example_opt rbm-opt sviz)
+    target_link_libraries(example_opt rbm-opt rbm-gui)
 endif()
