Continuing to merge sviz in as rbm-gui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_subdirectory(rbm-types)
 add_subdirectory(rbm-transform)
 add_subdirectory(rbm-diff)
 add_subdirectory(rbm-geometry)
+add_subdirectory(rbm-gui)
 # add_subdirectory(rbm-opt)
 add_subdirectory(rbm-probability)
 add_subdirectory(rbm-mechanics)
